updated import path

--- a/find.ipynb
+++ b/find.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -32,7 +32,7 @@
     "import warnings\n",
     "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
     "import sys\n",
-    "sys.path.append(r'..\\source_code_wurm\\py_files')\n",
+    "sys.path.append(r'.\\py_files_wurm')\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
